@@ -1,6 +1,7 @@
 client/api
 client/large
 client/open
+client/source-ip
 client/remctl
 docs/pod
 docs/pod-spelling
