@@ -2,6 +2,11 @@
 
 remctl 2.19 (unreleased)
 
+    Add new remctl_set_source_ip function to the remctl library API.  Call
+    this function after remctl_new and before remctl_open to set the
+    source IP address that will be used for subequent client connections
+    to a remctl server.
+
     remctld can be configured to pass the subcommand on standard input,
     but the documentation said this was not allowed.  Fix the
     documentation to match the implementation.
